[package]
name = "particle"
version = "0.1.0"
authors = ["liminghao <liminghao@xiaomi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = { path = "lib/panic-halt" }

[target.thumbv7m-none-eabi.dependencies]
arch = { path = "arch/arm/cortex-m/arch" }

[target.thumbv7em-none-eabihf.dependencies]
arch = { path = "arch/arm/cortex-m/arch" }
