[package]
name = "particle"
version = "0.1.0"
authors = ["liminghao <liminghao@xiaomi.com>"]
edition = "2018"

[dependencies]
miniheap = { path = "libs/miniheap" }
panic-halt = { path = "libs/panic-halt" }
rrt0 = { path = "libs/rrt0" }
spin = { path = "external/libs/spin" }

[target.thumbv7m-none-eabi.dependencies]
# cortex-m-semihosting = "0.3.3"

[target.thumbv7em-none-eabihf.dependencies]
